# gopal

./: Cargo.toml  LICENSE.md  README.md  gopald.service  justfile
src/: database.rs  lib.rs  main.rs  mpris_monitor.rs  session_tracker.rs
src/cli/: main.rs
src/daemon/: config.rs  main.rs
