[package]
name = "gopal"
version = "0.1.0"
edition = "2021"

[dependencies]
mpris = "2.0"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
tempfile = "3.0"

[dev-dependencies]
bacon = "2.0"

[[bin]]
name = "gopald"
path = "src/daemon/main.rs"

[[bin]]
name = "gopal-cli"
path = "src/cli/main.rs"
